--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby, styled-components, and Typography ",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Patrick Franz <patrick@championleads.co>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "formik": "^2.2.6",
@@ -24,7 +24,8 @@
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.3",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "typography-theme-bootstrap": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.2.1"
