--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-cookie-consent": "^6.2.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-is": "^17.0.2",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.3",
     "typography": "^0.16.19",
