--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.6.0",
-    "gatsby": "^3.3.1",
+    "gatsby": "^3.7.1",
     "gatsby-background-image": "^1.5.3",
+    "gatsby-cli": "^3.7.1",
     "gatsby-plugin-fontawesome-css": "^1.1.0",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-google-gtag": "^3.5.0",
